--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		
-
+		<div class="container">
+			<div class="header">
+				<span>(012) 345 6789</span>
+				<span>Call us <strong>now</strong></span>
+				<a href="" class="logo"></a>
+			</div>
+		</div>
+		<div class="footer">
+			<div class="container">
+				tradsfasfaf
+			</div>
+		</div>
+		<div class="container">
+			tradsfasfaf
+		</div>
 	</body>
 </html>
