--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>Burn Studio</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		<div class="container">
 			<div class="header">
-				<span>(012) 345 6789</span>
-				<span>Call us <strong>now</strong></span>
+				<div>
+					<span>(012) 345 6789</span>
+					<span class="text">Call us <strong>now</strong></span>
+				</div>
 				<a href="" class="logo"></a>
+			</div>
+			<div class="navigacia">
+				<ul>
+					<li class="home">
+						<a href="http://google.com">Úvod</a>
+					</li>
+					<li>
+						<a href="">Služby</a>
+					</li>
+					<li>
+						<a href="">Referencie</a>
+					</li>
+					<li>
+						<a href="">Projekty</a>
+					</li>
+					<li>
+						<a href="">Kontakt</a>
+					</li>
+				</ul>
+				<form>
+					<input type="search" placeholder="Vyhľadávanie...">
+					<button>Search</button>
+				</form>
 			</div>
 		</div>
 		<div class="footer">
